--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/347986-one-direction-1-logo.jpg" class="nav-img " loading="lazy">
+            <img src="img/lohg.png" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -56,7 +56,7 @@
         <section id="one direction" class="my-5 pt-6 secao-one direction" aria-label="Seção explicativa sobre o One Direction">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/images.jpeg" class="rounded-pill" width="44" height="33" loading="22">
+                    <img src="img/img.jpg" class="rounded-pill" width="563" height="327" loading="340">
                 </div>
                 <div class="col-5">
                     <h2>O que foi One Direction?</h2>
@@ -73,24 +73,13 @@
                 <h2 class="text-center pt-5">Galeria</h2>
                 <div class="container p-3 mt-3 fundo-galeria ">
     
-                    <div class="row justify-content-md-center">
-                        <div class="col-md-4">
-                            <img src="img/One_Direction_at_the_Logies_Awards_2012.jpg"
-                                class="img-fluid rounded-5" loading="lazy">
-                        </div>
-                        <div class="col-md-4">
-                            <img src="img
-                            class="img-fluid rounded-5"
-                                loading="lazy">
-                        </div>
-                    </div>
                     <div class="row mt-4  justify-content-md-center">
                         <div class="col-md-4">
-                            <img src="img/van-di-one-direction-zayn.jpg" class="img-fluid rounded-5"
+                            <img src="img/One_Direction_at_the_Logies_Awards_2012.jpg" class="img-fluid rounded-5"
                                 loading="lazy">
                         </div>
                         <div class="col-md-4">
-                            <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                            <img src="img/van-di-one-direction-zayn.jpg"
                                 class="img-fluid rounded-5" loading="lazy">
                         </div>
                     </div>
